[gd_scene load_steps=11 format=3 uid="uid://cetfjy7mo67yk"]

[ext_resource type="PackedScene" uid="uid://b533p6wrwgxuq" path="res://Hazards/hazard.tscn" id="1_fys5p"]
[ext_resource type="Script" path="res://Hazards/switch.gd" id="2_kh8nq"]
[ext_resource type="Texture2D" uid="uid://bogy74o5phwwu" path="res://Platformer/switch_block_circle.png" id="3_nyqgb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8f1pe"]
atlas = ExtResource("3_nyqgb")
region = Rect2(0, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_kuva8"]
atlas = ExtResource("3_nyqgb")
region = Rect2(320, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_tv1og"]
atlas = ExtResource("3_nyqgb")
region = Rect2(640, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0id3"]
atlas = ExtResource("3_nyqgb")
region = Rect2(960, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_uv4fa"]
atlas = ExtResource("3_nyqgb")
region = Rect2(1280, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_ve5sv"]
atlas = ExtResource("3_nyqgb")
region = Rect2(1600, 0, 320, 320)

[sub_resource type="SpriteFrames" id="SpriteFrames_oa5gx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8f1pe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kuva8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tv1og")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0id3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uv4fa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ve5sv")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[node name="Switch" instance=ExtResource("1_fys5p")]
position = Vector2(0, 9)
collision_layer = 0
script = ExtResource("2_kh8nq")

[node name="ColorRect" type="ColorRect" parent="." index="0"]
offset_left = -41.0
offset_top = -47.0
offset_right = 39.0
offset_bottom = 33.0

[node name="Icon" parent="." index="1"]
visible = false

[node name="Overlap" parent="." index="5"]
visible = false

[node name="CollisionShape2D" parent="Effect" index="0"]
position = Vector2(-1.5, -7)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." index="8"]
position = Vector2(-1, -7)
scale = Vector2(0.25, 0.25)
sprite_frames = SubResource("SpriteFrames_oa5gx")
frame = 5
frame_progress = 1.0
speed_scale = 3.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Effect" to="." method="_on_effect_area_entered"]
[connection signal="body_entered" from="Effect" to="." method="_on_effect_body_entered"]
